[issue-50] Added style to the main page scrollbar

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -436,3 +436,21 @@
     }
   }
 }
+
+body {
+  &::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background-color: rgb(245, 245, 245);
+  }
+  
+  &::-webkit-scrollbar {
+    width: 10px;
+    background-color: rgb(245, 245, 245);
+  }
+
+  &::-webkit-scrollbar-thumb {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: rgb(85, 85, 85);
+  }
+}
+
